# spider

./: README.md  Spider_Controller.lua  Spider_Router.jsfx  check.py  ping_pong_delay.spdrplugin  spdrplugin.md  spider.py  tape_saturator.spdrplugin
.github/workflows/: vst3-ci.yml
vst3/: CMakeLists.txt  README.md
vst3/extras/: fetch-deps.sh
vst3/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
